samples/_failures_safe/1761415407_be1588_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c036108.c: In function ‘main’:
./samples/SAFE/__tmp_7c036108.c:178:5: error: expected declaration or statement at end of input
  178 |     size_t len = strlen(input);
      |     ^~~~~~
